# test-instrumentation

./: .gitignore  README.md  cmaketracing.py  cmtrace.py  instrument.py  instrument.sh
example/: CMakeLists.txt  million.cxx  pow.h  thousand.cxx
example/subdir/: CMakeLists.txt
